# src/RedShirt.Example.Api.Core/UseCases/Order/Commands/Create/CreateOrderCommand.cs
@@ -1,3 +1,8 @@
 namespace RedShirt.Example.Api.Core.UseCases.Order.Commands.Create;
 
-public record CreateOrderCommand(Guid CustomerId, string Status, string TotalAmount, string IdempotencyKey);
+public record CreateOrderCommand(
+    Guid CustomerId,
+    string Status,
+    string TotalAmount,
+    string? TotalPrice,
+    string IdempotencyKey);
