# src/RedShirt.Example.Api.Core/UseCases/Order/Commands/Create/CreateOrderCommandHandler.cs
@@ -23,7 +23,8 @@ internal class CreateOrderCommandHandler(
             {
                 CustomerId = command.CustomerId,
                 Status = command.Status,
-                TotalAmount = command.TotalAmount
+                TotalAmount = command.TotalAmount,
+                TotalPrice = command.TotalPrice
             }, cancellationToken), cancellationToken);
     }
 }
