# src/RedShirt.Example.Api.Core/UseCases/Order/Commands/Patch/PatchOrderCommand.cs
@@ -1,3 +1,9 @@
 namespace RedShirt.Example.Api.Core.UseCases.Order.Commands.Patch;
 
-public record PatchOrderCommand(Guid Id, Guid? CustomerId, string? Status, string? TotalAmount);
+public record PatchOrderCommand(
+    Guid Id,
+    Guid? CustomerId,
+    string? Status,
+    string? TotalAmount,
+    string? TotalPrice,
+    bool? ClearTotalPrice);
