# src/RedShirt.Example.Api.Core/UseCases/Order/Commands/Update/UpdateOrderCommand.cs
@@ -1,3 +1,8 @@
 namespace RedShirt.Example.Api.Core.UseCases.Order.Commands.Update;
 
-public record UpdateOrderCommand(Guid Id, Guid CustomerId, string Status, string TotalAmount);
+public record UpdateOrderCommand(
+    Guid Id,
+    Guid CustomerId,
+    string Status,
+    string TotalAmount,
+    string? TotalPrice);
