# src/RedShirt.Example.Api.Core/UseCases/Order/Commands/Update/UpdateOrderCommandHandler.cs
@@ -21,7 +21,8 @@ internal class UpdateOrderCommandHandler(
             Id = command.Id,
             CustomerId = command.CustomerId,
             Status = command.Status,
-            TotalAmount = command.TotalAmount
+            TotalAmount = command.TotalAmount,
+            TotalPrice = command.TotalPrice
         }, cancellationToken);
     }
 }
